--- a/default.css
+++ b/default.css
@@ -47,6 +47,7 @@ p, li, span, label, input, textarea {
 a {
     text-decoration: none;
     color: var(--link-colour);
+	font-family: 'Big Shoulders Display', cursive;
 }
 
 a:hover {
@@ -292,25 +293,34 @@ a:hover {
 
 #card1 {
 	grid-area: card1;
+	background-image: url("./media/card_background.png");
 }
 
 
 #card2 {
 	grid-area: card2;
+	background-image: url("./media/card2_background.png");
 }
 
 #card3 {
 	grid-area: card3;
+	background-image: url("./media/card3_background.png");
 }
 
 .card {
 	color: #FFF;
-	background-image: url("./media/card_background.png");
 	background-size: cover;
 	padding: 10rem 0 0;
 	max-width: 35ch;
 	border-radius: 0.5rem;
 	overflow: hidden;
+	
+	transition: transform 500ms ease;
+}
+
+.card:hover,
+.card-focus-within {
+	transform: scale(1.05);
 }
 
 .card-content {
@@ -321,6 +331,32 @@ a:hover {
 		rgba(0,0,0,0.3) 20%, 
 		rgba(0,0,0,1)
 	);
+	
+	transform: translateY(55%);
+	transition: transform 500ms ease;
+}
+
+
+ 
+.card:hover .card-content,
+.cord:focus-within .card-content {
+	transform: translateY(0);
+	transition-delay: 500ms;
+}
+
+.card-focus-within .card-content {
+	transition-duration: 0ms;
+}
+
+.card-content > *:not(.card-title) {
+	opacity: 0;
+	transition: opacity 500ms linear;
+}
+
+.card:hover .card-content > *,
+.card:focus-within .card-content > *  {
+	opacity: 1;
+	transition-delay: 800ms;
 }
 
 .card-body  {
@@ -342,6 +378,15 @@ a:hover {
 	bottom: 0;
 	width: calc(100% + var(--padding));
 	background: #F00;
+	
+	transform: scaleX(0);
+	transform-origin: left;
+	transition: transform 500ms ease;
+}
+
+.card:hover .card-title:after,
+.card:focus-within .card-title:after {
+	transform: scaleX(1);
 }
 
 .card-button {
@@ -356,7 +401,7 @@ a:hover {
 
 .card-button:hover,
 .card-button:focus {
-	background-color: #000;
+	background-color: var(--preview-shadow);
 }
 
 
@@ -436,4 +481,21 @@ a:hover {
             'social'
         ;
     }
+}
+
+@media (prefers-reduced-motion: reduce)
+{
+	*,
+	*::before,
+	*::after	
+	{
+		animation-duration: 0.01ms
+		!important;
+		animation-iteration-count: 1
+		!important;
+		transition-duration: 0.01ms
+		!important;
+		scroll-behaviour: auto !important;
+		transition-delay: 0ms !important;
+	}
 }
